# healthy_track_api

./: .env  .env.example  .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
api/src/middlewares/: auth_middleware.rs
api/src/routes/: auth_route.rs  mod.rs  user_route.rs
api/src/routes/handlers/: auth_handler.rs  user_handler.rs
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: bcrypt_service.rs  jwt_service.rs  lib.rs  user_service.rs
service/src/models/: user.rs
service/src/responses/: mod.rs  user_response.rs
service/src/utils/: app_state.rs  constants.rs  mod.rs
src/: main.rs
